Remove storybook dark mode global css to prevent conflict for consuming applications

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,13 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@layer base {
-  body {
-    @apply
-      bg-white
-      text-zinc-800
-      dark:bg-zinc-800
-      dark:text-white
-  }
-}
